parser/src/parser/snapshots/test__parser::function::test::parse_exported_function.snap
---
created: "2020-05-04T19:10:30.604833Z"
creator: insta@0.8.2
source: parser/src/parser/function.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 19)
  FN_DEF@[0; 19)
    VISIBILITY@[0; 6)
      EXPORT_KW@[0; 6) "export"
    WHITESPACE@[6; 7) " "
    FN_KW@[7; 9) "fn"
    WHITESPACE@[9; 10) " "
    NAME@[10; 14)
      IDENT@[10; 14) "main"
    PARAM_LIST@[14; 16)
      L_PAREN@[14; 15) "("
      R_PAREN@[15; 16) ")"
    WHITESPACE@[16; 17) " "
    BLOCK_EXPR@[17; 19)
      BLOCK@[17; 19)
        L_CURLY@[17; 18) "{"
        R_CURLY@[18; 19) "}"

