parser/src/parser/snapshots/test__parser::function::test::parse_function.snap
---
created: "2020-02-03T16:29:14.873492Z"
creator: insta@0.8.2
source: parser/src/parser/function.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 12)
  FN_DEF@[0; 12)
    FN_KW@[0; 2) "fn"
    NAME@[2; 7)
      WHITESPACE@[2; 3) " "
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK@[10; 12)
      L_CURLY@[10; 11) "{"
      R_CURLY@[11; 12) "}"

