parser/src/parser/snapshots/test__parser::imports::test::parse_empty_import.snap
---
created: "2020-03-03T23:57:34.866108Z"
creator: insta@0.8.2
source: parser/src/parser/imports.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 11)
  IMPORT_DEF@[0; 11)
    IMPORT_KW@[0; 6) "import"
    WHITESPACE@[6; 7) " "
    IMPORT_SEGMENT@[7; 10)
      NAME@[7; 10)
        IDENT@[7; 10) "foo"
    SEMI@[10; 11) ";"

