parser/src/parser/snapshots/test__parser::pattern::test::parse_binding_pattern.snap
---
created: "2019-08-11T21:50:37.801296Z"
creator: insta@0.8.2
source: parser/src/parser/pattern.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 15)
  FN_DEF@[0; 13)
    FN_KW@[0; 2) "fn"
    NAME@[2; 6)
      IDENT@[2; 6) "main"
    PARAM_LIST@[6; 13)
      L_PAREN@[6; 7) "("
      PARAM@[7; 12)
        PLACEHOLDER_PAT@[7; 8)
          NAME@[7; 8)
            IDENT@[7; 8) "x"
        COLON@[8; 9) ":"
        IDENT_TYPE@[9; 12)
          IDENT@[9; 12) "i32"
      R_PAREN@[12; 13) ")"
  L_CURLY@[13; 14) "{"
  R_CURLY@[14; 15) "}"

