parser/src/parser/snapshots/test__parser::pattern::test::parse_nested_tuple_pattern.snap
---
created: "2020-05-02T10:11:44.401702Z"
creator: insta@0.8.2
source: parser/src/parser/pattern.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 25)
  FN_DEF@[0; 25)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 22)
      L_PAREN@[7; 8) "("
      PARAM@[8; 21)
        TUPLE_PAT@[8; 17)
          L_PAREN@[8; 9) "("
          BIND_PAT@[9; 10)
            NAME@[9; 10)
              IDENT@[9; 10) "x"
          COMMA@[10; 11) ","
          TUPLE_PAT@[11; 16)
            L_PAREN@[11; 12) "("
            BIND_PAT@[12; 13)
              NAME@[12; 13)
                IDENT@[12; 13) "y"
            COMMA@[13; 14) ","
            PLACEHOLDER_PAT@[14; 15)
              UNDERSCORE@[14; 15) "_"
            R_PAREN@[15; 16) ")"
          R_PAREN@[16; 17) ")"
        COLON@[17; 18) ":"
        IDENT_TYPE@[18; 21)
          IDENT@[18; 21) "i32"
      R_PAREN@[21; 22) ")"
    WHITESPACE@[22; 23) " "
    BLOCK_EXPR@[23; 25)
      BLOCK@[23; 25)
        L_CURLY@[23; 24) "{"
        R_CURLY@[24; 25) "}"

